--- a/webapp/contacts/templates/contacts/index.html
+++ b/webapp/contacts/templates/contacts/index.html
@@ -5,37 +5,68 @@
 <head>
     <meta charset="UTF-8">
     <title>Mon carnet d'adresses</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-<h1>Mon carnet d'adresses</h1>
-{% for user in users %}
 
-    <h2>{{user.full_name}}</h2>
-    {% if user.phone_number %}<p>{{user.phone_number}}</p>{% endif %}
-    {% if user.address %}<p>{{user.address}}</p>{% endif %}
+<div class="navbar">
+    <h1 class="text-white">Mon carnet d'adresses</h1>
+</div>
 
-    <form method="POST" action="{% url 'delete-contact' %}">
-        {% csrf_token %}
-        <input type="hidden" name="first_name" value="{{user.first_name}}" />
-        <input type="hidden" name="last_name" value="{{user.last_name}}" />
-        <button type="submit">Supprimer</button>
-    </form>
+<div class="container">
+    <div class="row g-4">
 
-{% endfor %}
 
-<form method="POST" action="{% url 'add-contact' %}">
-    {% csrf_token %}
-    <label for="first_name">Prénom</label>
-    <input id="first_name" type="text" name="first_name" />
-    <label for="last_name">Nom</label>
-    <input id="last_name" type="text" name="last_name" />
-    <label for="phone_number">Téléphone</label>
-    <input id="phone_number" type="text" name="phone_number" />
-    <label for="address">Adresse</label>
-    <textarea name="address" id="address" rows="3"></textarea>
-    <button type="submit">Ajouter</button>
-</form>
+        {% for user in users %}
+        <div class="col-md-6 col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title">{{user.full_name}}</h3>
+                    <div class="card-text">
+                        {% if user.phone_number %}<p class="text-primary">{{user.phone_number}}</p>{% endif %}
+                        {% if user.address %}<p>{{user.address}}</p>{% endif %}
+                    </div>
+                    <form method="POST" action="{% url 'delete-contact' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="first_name" value="{{user.first_name}}"/>
+                        <input type="hidden" name="last_name" value="{{user.last_name}}"/>
+                        <button type="submit" class="btn btn-danger">Supprimer</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+
+
+    </div>
+
+    <div class="row g-4 mt-5">
+        <form method="POST" action="{% url 'add-contact' %}">
+            {% csrf_token %}
+            <div class="mb-3">
+                <label for="first_name" class="form-label">Prénom</label>
+                <input id="first_name" type="text" name="first_name" class="form-control"/>
+            </div>
+            <div class="mb-3">
+                <label for="last_name" class="form-label">Nom</label>
+                <input id="last_name" type="text" name="last_name" class="form-control"/>
+            </div>
+            <div class="mb-3">
+                <label for="phone_number" class="form-label">Téléphone</label>
+                <input id="phone_number" type="text" name="phone_number" class="form-control"/>
+            </div>
+            <div class="mb-3">
+                <label for="address" class="form-label">Adresse</label>
+                <textarea name="address" id="address" rows="3" class="form-control"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Ajouter</button>
+        </form>
+    </div>
+
+</div>
+
+
 </body>
 </html>
